--- a/Gallery/Gallery.Web/Gallery.Web.csproj
+++ b/Gallery/Gallery.Web/Gallery.Web.csproj
@@ -61,7 +61,7 @@
       <DependentUpon>G1.mdf</DependentUpon>
     </Content>
     <Content Include="Client.aspx" />
-    <Content Include="ClientManagement.aspx" />
+    <Content Include="management\ClientManagement.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Docs\Issues.txt" />
     <Content Include="Docs\OldWebSites\About.htm" />
@@ -133,13 +133,14 @@
     <Content Include="Docs\OldWebSites\Work.htm" />
     <Content Include="Gallery.aspx" />
     <Content Include="GalleryControl.ascx" />
-    <Content Include="GalleryManager.aspx" />
+    <Content Include="management\GalleryManager.aspx" />
     <Content Include="home.aspx" />
     <Content Include="home.html" />
     <Content Include="Images\asmptag_sm.jpg" />
     <Content Include="Images\c-IMG_0164_resize.jpg" />
     <Content Include="Images\c-Show Jumping 2 179_resize.jpg" />
     <Content Include="Images\c1a-IMG_0098_resize.jpg" />
+    <Content Include="Images\client.jpg" />
     <Content Include="Images\Default.jpg" />
     <Content Include="Images\DxdSlogan.gif" />
     <Content Include="Images\EPN_logo.gif" />
@@ -157,20 +158,20 @@
     <Content Include="Images\defaultThumb.jpg" />
     <Content Include="Images\user.gif" />
     <Content Include="Index.htm" />
-    <Content Include="Management.aspx" />
+    <Content Include="management\Management.aspx" />
     <Content Include="ManagementHeader.ascx" />
-    <Content Include="PriceSettings.aspx" />
-    <Content Include="SavePhoto.aspx" />
+    <Content Include="management\PriceSettings.aspx" />
+    <Content Include="management\SavePhoto.aspx" />
     <Content Include="Scripts\admin.js" />
     <Content Include="Scripts\ajaxfileupload.js" />
     <Content Include="Scripts\Client.js" />
     <Content Include="Scripts\gallery.js" />
-    <Content Include="Scripts\Home.js" />
+    <Content Include="management\GalleryManagement.js" />
     <Content Include="Scripts\index.js" />
     <Content Include="Scripts\jquery-1.4.1.min.js" />
     <Content Include="Services.aspx" />
     <Content Include="SiteHeader.ascx" />
-    <Content Include="SQLManager.aspx" />
+    <Content Include="management\SQLManager.aspx" />
     <Content Include="Style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -196,11 +197,11 @@
     <Compile Include="Client.aspx.designer.cs">
       <DependentUpon>Client.aspx</DependentUpon>
     </Compile>
-    <Compile Include="ClientManagement.aspx.cs">
+    <Compile Include="management\ClientManagement.aspx.cs">
       <DependentUpon>ClientManagement.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="ClientManagement.aspx.designer.cs">
+    <Compile Include="management\ClientManagement.aspx.designer.cs">
       <DependentUpon>ClientManagement.aspx</DependentUpon>
     </Compile>
     <Compile Include="Contact.aspx.cs">
@@ -224,11 +225,11 @@
     <Compile Include="GalleryControl.ascx.designer.cs">
       <DependentUpon>GalleryControl.ascx</DependentUpon>
     </Compile>
-    <Compile Include="GalleryManager.aspx.cs">
+    <Compile Include="management\GalleryManager.aspx.cs">
       <SubType>ASPXCodeBehind</SubType>
       <DependentUpon>GalleryManager.aspx</DependentUpon>
     </Compile>
-    <Compile Include="GalleryManager.aspx.designer.cs">
+    <Compile Include="management\GalleryManager.aspx.designer.cs">
       <DependentUpon>GalleryManager.aspx</DependentUpon>
     </Compile>
     <Compile Include="home.aspx.cs">
@@ -238,11 +239,11 @@
     <Compile Include="home.aspx.designer.cs">
       <DependentUpon>home.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Management.aspx.cs">
+    <Compile Include="management\Management.aspx.cs">
       <DependentUpon>Management.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Management.aspx.designer.cs">
+    <Compile Include="management\Management.aspx.designer.cs">
       <DependentUpon>Management.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Code\ManagementBase.cs">
@@ -255,21 +256,21 @@
     <Compile Include="ManagementHeader.ascx.designer.cs">
       <DependentUpon>ManagementHeader.ascx</DependentUpon>
     </Compile>
-    <Compile Include="PriceSettings.aspx.cs">
+    <Compile Include="management\PriceSettings.aspx.cs">
       <DependentUpon>PriceSettings.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="PriceSettings.aspx.designer.cs">
+    <Compile Include="management\PriceSettings.aspx.designer.cs">
       <DependentUpon>PriceSettings.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App_Code\Utility.cs" />
     <Compile Include="App_Code\WebMethods.cs" />
-    <Compile Include="SavePhoto.aspx.cs">
+    <Compile Include="management\SavePhoto.aspx.cs">
       <DependentUpon>SavePhoto.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="SavePhoto.aspx.designer.cs">
+    <Compile Include="management\SavePhoto.aspx.designer.cs">
       <DependentUpon>SavePhoto.aspx</DependentUpon>
     </Compile>
     <Compile Include="Services.aspx.cs">
@@ -286,11 +287,11 @@
     <Compile Include="SiteHeader.ascx.designer.cs">
       <DependentUpon>SiteHeader.ascx</DependentUpon>
     </Compile>
-    <Compile Include="SQLManager.aspx.cs">
+    <Compile Include="management\SQLManager.aspx.cs">
       <DependentUpon>SQLManager.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="SQLManager.aspx.designer.cs">
+    <Compile Include="management\SQLManager.aspx.designer.cs">
       <DependentUpon>SQLManager.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
