--- a/Airport/Blue.Airport.Win/Blue.Airport.Win.csproj
+++ b/Airport/Blue.Airport.Win/Blue.Airport.Win.csproj
@@ -65,10 +65,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Paging.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Paging.Designer.cs">
+      <DependentUpon>Paging.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Paging.resx">
+      <DependentUpon>Paging.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -91,6 +100,7 @@
     <None Include="App_Data\BullDataSet.xss">
       <DependentUpon>BullDataSet.xsd</DependentUpon>
     </None>
+    <None Include="Properties\DataSources\TestEntity.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -100,6 +110,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Lib\Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Bull.mdf">
