--- a/branches/Airport/Airport/Blue.Airport.Win/Blue.Airport.Win.csproj
+++ b/branches/Airport/Airport/Blue.Airport.Win/Blue.Airport.Win.csproj
@@ -71,6 +71,10 @@
     <Compile Include="Controls\Paging.Designer.cs">
       <DependentUpon>Paging.cs</DependentUpon>
     </Compile>
+    <Compile Include="Lib\CParser.cs" />
+    <Compile Include="Lib\frmProgress.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
