--- a/branches/Airport/Airport/Blue.Airport.Win/Blue.Airport.Win.csproj
+++ b/branches/Airport/Airport/Blue.Airport.Win/Blue.Airport.Win.csproj
@@ -72,9 +72,35 @@
       <DependentUpon>Paging.cs</DependentUpon>
     </Compile>
     <Compile Include="Lib\CParser.cs" />
+    <Compile Include="Lib\frmConfigDB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Lib\frmGUISQL.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Lib\frmMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Lib\frmMain.designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
     <Compile Include="Lib\frmProgress.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Lib\frmSQLEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Lib\frmSQLMan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Lib\FrmWaiting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Lib\FrmWaiting.Designer.cs">
+      <DependentUpon>FrmWaiting.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Lib\SqlHelper.cs" />
+    <Compile Include="Lib\DbUtility.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -82,6 +108,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Paging.resx">
       <DependentUpon>Paging.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Lib\FrmWaiting.resx">
+      <DependentUpon>FrmWaiting.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
