--- a/branches/Airport/Airport/Blue.Airport.Win/app.config
+++ b/branches/Airport/Airport/Blue.Airport.Win/app.config
@@ -3,8 +3,12 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Blue.Airport.Win.Properties.Settings.BullConnectionString"
+        <!--<add name="Blue.Airport.Win.Properties.Settings.BullConnectionString"
             connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\App_Data\Bull.mdf;Integrated Security=True;User Instance=True"
-            providerName="System.Data.SqlClient" />
+            providerName="System.Data.SqlClient" />-->
+        <add name="Blue.Airport.Win.Properties.Settings.BullConnectionString"
+        connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=D:\KyleXY\Airport\Airport\Blue.Airport.Win\App_Data\Bull.mdf;Integrated Security=True;User Instance=True"
+        providerName="System.Data.SqlClient" />
+        <!--D:\KyleXY\Airport\Airport\Blue.Airport.Win\App_Data-->
     </connectionStrings>
 </configuration>
