--- a/Airport/Blue.Airport.Win/Blue.Airport.Win.csproj
+++ b/Airport/Blue.Airport.Win/Blue.Airport.Win.csproj
@@ -72,6 +72,12 @@
     <Compile Include="Controls\Paging.Designer.cs">
       <DependentUpon>Paging.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmDataGridView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmDataGridView.Designer.cs">
+      <DependentUpon>FrmDataGridView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Lib\CParser.cs" />
     <Compile Include="Lib\DateConverter.cs" />
     <Compile Include="Lib\FlrManager.cs" />
@@ -162,6 +168,9 @@
       <DependentUpon>Bull.mdf</DependentUpon>
     </Content>
     <EmbeddedResource Include="App_Data\Sitioparser.queues.txt.sql" />
+    <EmbeddedResource Include="Forms\FrmDataGridView.resx">
+      <DependentUpon>FrmDataGridView.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
